# Rust

./: README.md
library_rust/: .env  Cargo.toml  book.sql  record.sql  user.sql
library_rust/webapp/: Cargo.toml
library_rust/webapp/src/: error.rs  handlers.rs  main.rs  mod.rs  models.rs  routers.rs
library_rust/webapp/static/: register.html  users.html
library_rust/webservice/: Cargo.toml
library_rust/webservice/src/: error.rs  routers.rs  state.rs
library_rust/webservice/src/dbaccess/: book.rs  mod.rs  record.rs  user.rs
library_rust/webservice/src/handlers/: book.rs  course.rs  mod.rs  record.rs  user.rs
library_rust/webservice/src/models/: book.rs  mod.rs  record.rs  user.rs
library_vue/: README.md  index.html  package-lock.json  package.json  vite.config.js
library_vue/src/: App.vue  main.js
library_vue/src/components/: AllBorrow.vue  AllRecord.vue  AllUserInfo.vue  BorrowBook.vue  Login.vue  ManageBook.vue  Manager.vue  Reader.vue  Register.vue  ReturnBook.vue
library_vue/src/router/: index.js
