[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "library-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "2.6.0"
actix-web = "4.0.0"
rstest = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
# openssl = { version = "0.10.38", features = ["vendored"] }
serde = { version = "1.0.134", features = ["derive"] }
sqlx = { version = "0.5.10", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
actix-cors = "0.6.4"

[[bin]]
name = "library-service"





